--- a/index.html
+++ b/index.html
@@ -41,85 +41,98 @@
                     from 2008-2024.
                     Focused on data preprocessing, cleaning, and visualization to identify successful teams and players,
                     analyze key performance factors, and spot trends over time.</li>
+                <hr>
                 <li><strong><a href="https://github.com/Giritharan1115/Investment-Calculator" target="_blank">Investment
                             Calculator:</a></strong> Developed an interactive investment calculator using
                     React.js, enabling users to input investment details and
                     dynamically calculate investment value, yearly interest, total interest earned, and invested
                     capital.</li>
+                <hr>
                 <li><strong><a href="https://giritharan1115.github.io/Website-gym" target="_blank">Fitness
                             Website:</a></strong> Built a comprehensive fitness resource center using HTML, CSS and
                     JS, catering to health-conscious users.</li>
+                <hr>
                 <li><strong>Student Database Management System:</strong> Developed a Java-based application using MySQL
                     and Eclipse IDE, streamlining student information
                     management for educational institutions and reducing data retrieval time through efficient database
                     queries.</li>
+                <hr>
             </ul>
         </section>
 
         <section id="certificates">
             <h2>Certificates</h2>
-            <ul>
-                <li>
-                    <span><strong>Udemy: </strong>
-                        <a href="https://www.udemy.com/certificate/UC-d160e9b0-c688-468d-be23-a84342791d75">Complete
-                            Data Analyst Bootcamp</a>
-                    </span>
-                    <span>December, 2024</span>
-                </li>
-                <li>
-                    <span><strong>Great Learning: </strong>
-                        <a href="https://www.mygreatlearning.com/certificate/SFEMWOFY">Excel for Beginners</a></span>
-                    <span>October, 2024</span>
-                </li>
-                <li>
-                    <span><strong>FreeCodeCamp: </strong>
-                        <a href="https://www.freecodecamp.org/certification/giritharan11/responsive-web-design">Responsive
-                            Web Design</a>
-                    </span>
-                    <span>July, 2024</span>
-                </li>
-                <li>
-                    <span><strong>IBM(Cognitive Class.ai): </strong>
-                        <a href="https://courses.cognitiveclass.ai/certificates/ea4b1d0999bc4efdb4235480cafe0afb">SQL
-                            and Relational Databases 101</a>
-                    </span>
-                    <span>July, 2024</span>
-                </li>
-                <li>
-                    <span><strong>Great Learning: </strong>
-                        <a href="http://verify.mygreatlearning.com/KBEHWNDV">Introduction to JavaScript</a></span>
-                    <span>June, 2024</span>
-                </li>
-                <li>
-                    <span><strong>Great Learning: </strong>
-                        <a href="http://verify.mygreatlearning.com/DPYWHXTA">Intro to Graphic Design with
-                            Photoshop</a></span>
-                    <span>June, 2024</span>
-                </li>
-                <li>
-                    <span><strong>Accenture: </strong>
-                        <a href="https://www.futurelearn.com/certificates/5py2xey">Digital Skills: User
-                            Experience</a></span>
-                    <span>April, 2024</span>
-                </li>
-                <li>
-                    <span><strong>Hacker Rank: </strong>
-                        <a href="https://www.hackerrank.com/certificates/97d752e82cf4">Problem Solving
-                            (Basics)</a></span>
-                    <span>November, 2022</span>
-                </li>
-                <li>
-                    <span><strong>Hacker Rank: </strong>
-                        <a href="https://www.hackerrank.com/certificates/c84647c75095">Java (Basics)</a></span>
-                    <span>November, 2022</span>
-                </li>
-                <li>
-                    <span><strong>Udemy: </strong>
-                        <a href="https://www.udemy.com/certificate/UC-8daf75ac-2e0f-4080-92a3-75d397c94675">JDBC
-                            Basics</a></span>
-                    <span>April, 2022</span>
-                </li>
-            </ul>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Institution</th>
+                        <th>Course</th>
+                        <th>Completion Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Udemy</td>
+                        <td><a href="https://www.udemy.com/certificate/UC-d160e9b0-c688-468d-be23-a84342791d75">
+                                Complete Data Analyst Bootcamp</a></td>
+                        <td>December, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Great Learning</td>
+                        <td><a href="https://www.mygreatlearning.com/certificate/SFEMWOFY">
+                                Excel for Beginners</a></td>
+                        <td>October, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>FreeCodeCamp</td>
+                        <td><a href="https://www.freecodecamp.org/certification/giritharan11/responsive-web-design">
+                                Responsive Web Design</a></td>
+                        <td>July, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>IBM (Cognitive Class.ai)</td>
+                        <td><a href="https://courses.cognitiveclass.ai/certificates/ea4b1d0999bc4efdb4235480cafe0afb">
+                                SQL and Relational Databases 101</a></td>
+                        <td>July, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Great Learning</td>
+                        <td><a href="http://verify.mygreatlearning.com/KBEHWNDV">
+                                Introduction to JavaScript</a></td>
+                        <td>June, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Great Learning</td>
+                        <td><a href="http://verify.mygreatlearning.com/DPYWHXTA">
+                                Intro to Graphic Design with Photoshop</a></td>
+                        <td>June, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Accenture</td>
+                        <td><a href="https://www.futurelearn.com/certificates/5py2xey">
+                                Digital Skills: User Experience</a></td>
+                        <td>April, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Hacker Rank</td>
+                        <td><a href="https://www.hackerrank.com/certificates/97d752e82cf4">
+                                Problem Solving (Basics)</a></td>
+                        <td>November, 2022</td>
+                    </tr>
+                    <tr>
+                        <td>Hacker Rank</td>
+                        <td><a href="https://www.hackerrank.com/certificates/c84647c75095">
+                                Java (Basics)</a></td>
+                        <td>November, 2022</td>
+                    </tr>
+                    <tr>
+                        <td>Udemy</td>
+                        <td><a href="https://www.udemy.com/certificate/UC-8daf75ac-2e0f-4080-92a3-75d397c94675">
+                                JDBC Basics</a></td>
+                        <td>April, 2022</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section id="skills">
@@ -127,13 +140,18 @@
             <ul>
                 <li><i class="fas fa-code"></i><strong> Programming Languages:</strong> Java, JavaScript, Python(Numpy,
                     Pandas, Matplotlib, Seaborn)</li>
+                <hr>
                 <li><i class="fas fa-laptop-code"></i><strong> Web Development:</strong> HTML, CSS, Bootstrap, React.js
                 </li>
+                <hr>
                 <li><i class="fas fa-database"></i><strong> Database:</strong> SQL</li>
+                <hr>
                 <li><i class="fas fa-vector-square"></i><strong> Design Tools:</strong> Adobe Photoshop, Adobe
                     Illustrator</li>
+                <hr>
                 <li><i class="fas fa-laptop"></i><strong> Software:</strong> Eclipse IDE, Visual Studio Code, Jupyter
                     Notebook, Microsoft Excel</li>
+                <hr>
             </ul>
         </section>
     </main>
